create desktop section About me

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
           earum laudantium perferendis quaerat reprehenderit?
         </p>
         <a
-          class="home-info-link"
+          class="inner-info-link home-info-link"
           href="#"
         >
           Связаться со мной
@@ -153,6 +153,64 @@
       Scroll down
       <i class="fa-solid fa-arrow-down"></i>
     </a>
+  </section>
+  <section
+    class="about section"
+    id="about"
+  >
+    <div class="container flex-center">
+      <h2 class="inner-title">
+        Обо мне
+      </h2>
+      <h3 class="inner-second-title">
+        Обо мне
+      </h3>
+      <div class="about-wrapper">
+        <div class="about-img">
+          <img
+            src="./img/about-img.png"
+            alt="Обо мне"
+            width=""
+            height=""
+            loading="lazy"
+          />
+        </div>
+        <div class="about-info">
+          <div class="description">
+            <h3>Я - Александр</h3>
+            <h4>И я <span> Front-end Developer </span> живу в
+              <span> Челябинске</span>
+            </h4>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias
+              commodi fugiat iusto labore magni quae quisquam velit vitae
+              voluptates voluptatum.
+            </p>
+          </div>
+          <ul class="professional-list">
+            <li class="list-item">
+              <span class="number">1+</span>
+              <span class="text">Опыта в разработке</span>
+            </li>
+            <li class="list-item">
+              <span class="number">10+</span>
+              <span class="text">Довольных клиентов</span>
+            </li>
+            <li class="list-item">
+              <span class="number">2</span>
+              <span class="text">Успешных проекта</span>
+            </li>
+          </ul>
+          <a
+            class="inner-info-link"
+            href="/"
+          >
+            Скачать
+            <i class="fa-solid fa-download"></i>
+          </a>
+        </div>
+      </div>
+    </div>
   </section>
 </main>
 </body>
