create desktop section About me

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
           earum laudantium perferendis quaerat reprehenderit?
         </p>
         <a
-          class="home-info-link"
+          class="inner-info-link home-info-link"
           href="#"
         >
           Связаться со мной
@@ -153,6 +153,272 @@
       Scroll down
       <i class="fa-solid fa-arrow-down"></i>
     </a>
+  </section>
+  <section
+    class="about section"
+    id="about"
+  >
+    <div class="container flex-center">
+      <h2 class="inner-title">
+        Обо мне
+      </h2>
+      <h3 class="inner-second-title">
+        Обо мне
+      </h3>
+      <div class="about-wrapper">
+        <div class="about-img">
+          <img
+            src="./img/about-img.png"
+            alt="Обо мне"
+            width=""
+            height=""
+            loading="lazy"
+          />
+        </div>
+        <div class="about-info">
+          <div class="description">
+            <h3>Я - Александр</h3>
+            <h4>И я <span> Front-end Developer </span> живу в
+              <span> Челябинске</span>
+            </h4>
+            <p>
+              design and develop services for customers specializing creating
+              stylish, modern websites, web services and online stores. My
+              passion is to design digital user experiences through meaningful
+              interactions. Check out my Portfolio
+            </p>
+          </div>
+          <ul class="professional-list">
+            <li class="list-item">
+              <span class="number">1+</span>
+              <span class="text">Опыта в разработке</span>
+            </li>
+            <li class="list-item">
+              <span class="number">10+</span>
+              <span class="text">Довольных клиентов</span>
+            </li>
+            <li class="list-item">
+              <span class="number">2</span>
+              <span class="text">Успешных проекта</span>
+            </li>
+          </ul>
+          <a
+            class="inner-info-link"
+            href="/"
+          >
+            Скачать
+            <i class="fa-solid fa-download"></i>
+          </a>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section
+    class="skills section"
+    id="skills"
+  >
+    <div class="container flex-center">
+      <h2 class="inner-title">
+        Мои скиллы
+      </h2>
+      <h3 class="inner-second-title">
+        Мои скиллы
+      </h3>
+      <div class="inner-content">
+        <div class="skills-description">
+          <h3>Education & Skills</h3>
+          <p>For more than 5 years our experts have been accomplishing enough
+            with modern Web Development, new generation web and app programming
+            language.
+          </p>
+        </div>
+        <div class="skills-info education-all">
+          <div class="education">
+            <h4 class="label">
+              Education
+            </h4>
+            <ul class="education-list">
+              <li class="item">
+                <span class="year">
+                  2020-2021
+                </span>
+                <p>
+                  Ph.D in Horriblensess - Harvard University, Cambridge, MA
+                </p>
+              </li>
+              <li class="item">
+                <span class="year">
+                  2018-2019
+                </span>
+                <p>
+                  Computer Science - Imperialize Technical Institute
+                </p>
+              </li>
+              <li class="item">
+                <span class="year">
+                  2016-2018
+                </span>
+                <p>
+                  Graphic Designer - Web Graphy, Los Angeles, CA
+                </p>
+              </li>
+            </ul>
+          </div>
+          <div class="education">
+            <h4 class="label">
+              Skills
+            </h4>
+            <ul class="bars">
+              <li class="bar">
+                <div class="info">
+                    <span>
+                      HTML
+                    </span>
+                  <span>
+                      95%
+                    </span>
+                </div>
+                <div class="line html">
+                </div>
+              </li>
+              <li class="bar">
+                <div class="info">
+                    <span>
+                      CSS
+                    </span>
+                  <span>
+                      85%
+                    </span>
+                </div>
+                <div class="line css">
+                </div>
+              </li>
+              <li class="bar">
+                <div class="info">
+                    <span>
+                      JAVASCRIPT
+                    </span>
+                  <span>
+                      85%
+                    </span>
+                </div>
+                <div class="line js">
+                </div>
+              </li>
+              <li class="bar">
+                <div class="info">
+                    <span>
+                      JQUERY
+                    </span>
+                  <span>
+                      75%
+                    </span>
+                </div>
+                <div class="line jq">
+                </div>
+              </li>
+              <li class="bar">
+                <div class="info">
+                    <span>
+                      PHP
+                    </span>
+                  <span>
+                      45%
+                    </span>
+                </div>
+                <div class="line php">
+                </div>
+              </li>
+            </ul>
+          </div>
+          <div class="education">
+            <h4 class="label">
+              Awards
+            </h4>
+            <ul class="education-list">
+              <li class="item">
+                  <span class="year">
+                    2021
+                  </span>
+                <p>
+                    <span>
+                      Best Developer
+                    </span>
+                  - University Of Melbourne, NA
+                </p>
+              </li>
+              <li class="item">
+                  <span class="year">
+                    2020
+                  </span>
+                <p>
+                    <span>
+                      Best Writter
+                    </span>
+                  - Online Typodev Soluation Ltd.
+                </p>
+              </li>
+              <li class="item">
+                  <span class="year">
+                    2019
+                  </span>
+                <p>
+                    <span>
+                      Best Freelancer
+                    </span>
+                  - Fiver & Upwork Level 2 & Top Rated
+                </p>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <div class="education work-exp">
+          <h3 class="work-exp-title">
+            Work & Experience
+          </h3>
+          <div class="skills-info">
+            <div class="experience-card">
+              <div class="upper">
+                <h3>Sr. Graphic Designer</h3>
+                <h5>Part Time | Office</h5>
+                <span>2020 - 2021</span>
+                <div class="hr"></div>
+              </div>
+              <h4 class="label">Avada Theme.</h4>
+              <p>I design and develop services for customers of all sizes,
+                specializing in creating stylish, modern websites
+              </p>
+            </div>
+            <div class="experience-card">
+              <div class="upper">
+                <h3>Cr. Web Developer</h3>
+                <h5>Full Time | InHouse</h5>
+                <span>2019 - 2020</span>
+                <div class="hr"></div>
+              </div>
+              <h4 class="label">ib-themes ltd.</h4>
+              <p>I design and develop services for customers of all sizes,
+                specializing in creating stylish, modern websites
+              </p>
+            </div>
+            <div class="experience-card">
+              <div class="upper">
+                <h3>Jr. Web Developer</h3>
+                <h5>Full Time | Remote</h5>
+                <span>2018 - 2019</span>
+                <div class="hr"></div>
+              </div>
+              <h4 class="label">Creative Gigs.</h4>
+              <p>I design and develop services for customers of all sizes,
+                specializing in creating stylish, modern websites
+              </p>
+            </div>
+          </div>
+
+        </div>
+      </div>
+    </div>
+
   </section>
 </main>
 </body>
