--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           <li class="nav-item">
             <a
               class="nav-link active"
-              href="#"
+              href="#home"
             >
               Home
             </a>
@@ -57,7 +57,7 @@
           <li class="nav-item">
             <a
               class="nav-link"
-              href="#"
+              href="#skills"
             >
               Skills
             </a>
@@ -65,7 +65,7 @@
           <li class="nav-item">
             <a
               class="nav-link"
-              href="#"
+              href="#services"
             >
               Services
             </a>
@@ -73,7 +73,7 @@
           <li class="nav-item">
             <a
               class="nav-link"
-              href="#"
+              href="#portfolio"
             >
               Portfolio
             </a>
@@ -81,7 +81,7 @@
           <li class="nav-item">
             <a
               class="nav-link"
-              href="#"
+              href="#contacts"
             >
               Contacts
             </a>
@@ -219,7 +219,6 @@
       </div>
     </div>
   </section>
-
   <section
     class="skills section"
     id="skills"
@@ -425,9 +424,46 @@
         </div>
       </div>
     </div>
-
   </section>
-  
+  <section
+    class="services section"
+    id="services"
+  >
+    <div class="container flex-center">
+      <h2 class="inner-title">
+        Services
+      </h2>
+      <h3 class="inner-second-title">
+        Services
+      </h3>
+    </div>
+  </section>
+  <section
+    class="services section"
+    id="portfolio"
+  >
+    <div class="container flex-center">
+      <h2 class="inner-title">
+        Portfolio
+      </h2>
+      <h3 class="inner-second-title">
+        Portfolio
+      </h3>
+    </div>
+  </section>
+  <section
+    class="contacts section"
+    id="contacts"
+  >
+    <div class="container flex-center">
+      <h2 class="inner-title">
+        Contacts
+      </h2>
+      <h3 class="inner-second-title">
+        Contacts
+      </h3>
+    </div>
+  </section>
 </main>
 </body>
 
