--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           <li class="nav-item">
             <a
               class="nav-link active"
-              href="#"
+              href="#home"
             >
               Home
             </a>
@@ -57,7 +57,7 @@
           <li class="nav-item">
             <a
               class="nav-link"
-              href="#"
+              href="#skills"
             >
               Skills
             </a>
@@ -65,7 +65,7 @@
           <li class="nav-item">
             <a
               class="nav-link"
-              href="#"
+              href="#services"
             >
               Services
             </a>
@@ -73,7 +73,7 @@
           <li class="nav-item">
             <a
               class="nav-link"
-              href="#"
+              href="#portfolio"
             >
               Portfolio
             </a>
@@ -81,7 +81,7 @@
           <li class="nav-item">
             <a
               class="nav-link"
-              href="#"
+              href="#contacts"
             >
               Contacts
             </a>
@@ -219,7 +219,6 @@
       </div>
     </div>
   </section>
-
   <section
     class="skills section"
     id="skills"
@@ -425,9 +424,203 @@
         </div>
       </div>
     </div>
-
   </section>
-  
+  <section
+    class="services section"
+    id="services"
+  >
+    <div class="container flex-center">
+      <h2 class="inner-title">
+        Services
+      </h2>
+      <h3 class="inner-second-title">
+        Services
+      </h3>
+      <div class="services-wrapper">
+        <h3 class="services-description">What I provide</h3>
+        <ul class="services-list">
+          <li class="services-container">
+            <div class="service-card">
+              <i class="fa-solid fa-pen-ruler"></i>
+              <h3>Ui/UX Consultancy</h3>
+              <div class="learn-more-btn">
+                Learn More
+                <i class="fa-solid fa-arrow-right"></i>
+              </div>
+            </div>
+            <div class="service-modal">
+              <div class="service-modal-body">
+                <i class="fa-solid fa-xmark"></i>
+                <h3>Ui/UX Consultancy</h3>
+                <h4>What is UX consulting?</h4>
+                <p>UX consulting helps companies improve their product’s overall
+                  usability and optimize expenses by implementing the right UX
+                  processes, methods, and tools.
+                </p>
+                <h4>What I provide</h4>
+                <ul>
+                  <li>
+                    <i class="fa-solid fa-circle-check"></i>
+                    Establish the right UX processes
+                  </li>
+                  <li>
+                    <i class="fa-solid fa-circle-check"></i>
+                    Create exceptional user experiences
+                  </li>
+                  <li>
+                    <i class="fa-solid fa-circle-check"></i>
+                    Discover new business opportunities
+                  </li>
+                  <li>
+                    <i class="fa-solid fa-circle-check"></i>
+                    Save resources
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </li>
+          <li class="services-container">
+            <div class="service-card">
+              <i class="fa-solid fa-photo-film"></i>
+              <h3>Branding & Design</h3>
+              <div class="learn-more-btn">
+                Learn More
+                <i class="fa-solid fa-arrow-right"></i>
+              </div>
+            </div>
+            <div class="service-modal">
+              <div class="service-modal-body">
+                <i class="fa-solid fa-xmark"></i>
+                <h3>Branding & Design</h3>
+                <h4>What is Brand & Design?</h4>
+                <p>Brand Design can be defined as one of the crucial marketing
+                  practices of creating the name, logo, design, and the symbolic
+                  elements related to the brand to create a distinctive identity
+                  in comparison to the other brands in the market and also
+                  providing impetus to the product differentiation.
+                </p>
+                <h4>What I provide</h4>
+                <ul>
+                  <li>
+                    <i class="fa-solid fa-circle-check"></i>
+                    Logo Design
+                  </li>
+                  <li>
+                    <i class="fa-solid fa-circle-check"></i>
+                    Banner Design
+                  </li>
+                  <li>
+                    <i class="fa-solid fa-circle-check"></i>
+                    Visual Identity Packages
+                  </li>
+                  <li>
+                    <i class="fa-solid fa-circle-check"></i>
+                    Business Cards & Business Systems
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </li>
+          <li class="services-container">
+            <div class="service-card">
+              <i class="fa-solid fa-file-code"></i>
+              <h3>Web Development</h3>
+              <div class="learn-more-btn">
+                Learn More
+                <i class="fa-solid fa-arrow-right"></i>
+              </div>
+            </div>
+            <div class="service-modal">
+              <div class="service-modal-body">
+                <i class="fa-solid fa-xmark"></i>
+                <h3>Web Development</h3>
+                <h4>What is Web Development?</h4>
+                <p>Web development services are used to design, build, support,
+                  and evolve all types of web-based software.
+                </p>
+                <h4>What I provide</h4>
+                <ul>
+                  <li>
+                    <i class="fa-solid fa-circle-check"></i>
+                    Web application development
+                  </li>
+                  <li>
+                    <i class="fa-solid fa-circle-check"></i>
+                    Testing
+                  </li>
+                  <li>
+                    <i class="fa-solid fa-circle-check"></i>
+                    Maintenance
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </li>
+          <li class="services-container">
+            <div class="service-card">
+              <i class="fa-solid fa-align-left"></i>
+              <h3>Content Writing</h3>
+              <div class="learn-more-btn">
+                Learn More
+                <i class="fa-solid fa-arrow-right"></i>
+              </div>
+            </div>
+            <div class="service-modal">
+              <div class="service-modal-body">
+                <i class="fa-solid fa-xmark"></i>
+                <h3>Content Writing</h3>
+                <h4>What is Content Writing?</h4>
+                <p>Content writing is the process of planning, writing and
+                  editing web content, typically for digital marketing purposes.
+                </p>
+                <h4>What I provide</h4>
+                <ul>
+                  <li>
+                    <i class="fa-solid fa-circle-check"></i>
+                    Web content writing
+                  </li>
+                  <li>
+                    <i class="fa-solid fa-circle-check"></i>
+                    Blog writing for websites
+                  </li>
+                  <li>
+                    <i class="fa-solid fa-circle-check"></i>
+                    Social media content
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </section>
+  <section
+    class="services section"
+    id="portfolio"
+  >
+    <div class="container flex-center">
+      <h2 class="inner-title">
+        Portfolio
+      </h2>
+      <h3 class="inner-second-title">
+        Portfolio
+      </h3>
+    </div>
+  </section>
+  <section
+    class="contacts section"
+    id="contacts"
+  >
+    <div class="container flex-center">
+      <h2 class="inner-title">
+        Contacts
+      </h2>
+      <h3 class="inner-second-title">
+        Contacts
+      </h3>
+    </div>
+  </section>
 </main>
 </body>
 
