create css section services

--- a/index.html
+++ b/index.html
@@ -125,8 +125,8 @@
         </h1>
         <h3>Front-end Developer</h3>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab culpa
-          earum laudantium perferendis quaerat reprehenderit?
+          I create stunning websites for your business, Highly experienced in
+          web design and development.
         </p>
         <a
           class="inner-info-link home-info-link"
@@ -139,7 +139,7 @@
       <div class="home-img">
         <img
           src="./img/main-img.png"
-          alt=""
+          alt="моё фото"
           width=""
           height=""
           loading="lazy"
@@ -182,16 +182,10 @@
               <span> Челябинске</span>
             </h4>
             <p>
-              <<<<<<< HEAD
               design and develop services for customers specializing creating
               stylish, modern websites, web services and online stores. My
               passion is to design digital user experiences through meaningful
               interactions. Check out my Portfolio
-              =======
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias
-              commodi fugiat iusto labore magni quae quisquam velit vitae
-              voluptates voluptatum.
-              >>>>>>> origin/main
             </p>
           </div>
           <ul class="professional-list">
